--- a/app/index.html
+++ b/app/index.html
@@ -6,15 +6,7 @@
   <body>
     <canvas id="we-did-it-fam"></canvas>
     <script>
-    var axiom = "A";
-    var production = {
-      A: "AB",
-      B: "A",
-    };
-
-    for (var i=0; i < 5; i++) {
-      console.log(svv.recurLSystem(axiom, production, i));
-    }
+    console.log(svv.hilbert(5));
     </script>
   </body>
 </html>
