--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
       body {
         background-color: #FBF4E0;
         background-color: #EFEFEF;
+        font-family: sans-serif;
+        font-size: 14pt;
       }
       canvas {
         border: solid 0px black;
@@ -14,6 +16,7 @@
   </head>
   <body>
     <canvas width=700 height=700 id="we-did-it-fam"></canvas>
+    Space filling words
     <script>
 
     var hilbert = new svv.Hilbert(document.getElementById("we-did-it-fam"), 6);
